[package]
name = "vortex"
version = "0.1.0"
authors = ["Sam M <sam.mackenzie@live.com>"]
edition = "2018"
license="MIT"
readme="README.md"
repository="https://github.com/pigeonhands/vortex-rs"
description="Reverse proxy wip."
keywords = ["web", "proxy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix-http = "1.0.1"
actix-files = "0.2.2"

url = "2.1.1"
mime = "0.3.16"

clap = { package = "clap-v3", version = "3.0.0-beta.1" } 

regex = "1.3.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_regex = "0.4.0"

log = "0.4"
fern = { version = "0.6.0"}
chrono = "0.4.11"


